# rv_final1

./: .gitignore  mobilenet_detection.py
src/autopilot/: CMakeLists.txt  package.xml
src/autopilot/launch/: .moving.launch.swp  moving.launch
src/autopilot/msg/: Controller_Commands.msg  State.msg
src/autopilot/scripts/: controller.py
src/kbhackathon/kb_utils/launch/: realsense.launch  slam.launch
src/mc_estimator/: CMakeLists.txt  package.xml
src/mc_estimator/include/: mc_estimator.h
src/mc_estimator/src/: mc_estimator.cpp
src/person_follow/: CMakeLists.txt  package.xml
src/person_follow/launch/: person_follow.launch
src/person_follow/msg/: Location.msg
src/person_follow/scripts/: followControl.py  follow_control.py  mobilenet_detection.py  person_detection.py
src/realsense/realsense2_camera/include/: realsense_node_factory.h
src/realsense/realsense2_camera/src/: realsense_node_factory.cpp
